@@ -4,7 +4,7 @@ min-version: 2.0
 sources:
   git:
     config:
-      checkout-submodules: False
+      checkout-submodules: True
 elements:
   manual:
     config:
